--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-publicadores",
+  "name": "serverless-lambda-authorizer-jwt",
   "version": "0.0.1",
   "description": "Serverless REST API using serverless",
   "main": "handlers.js",
@@ -17,11 +17,6 @@
   ],
   "author": "",
   "license": "ISC",
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run lint && npm run test:cover"
-    }
-  },
   "dependencies": {
     "aws-sdk": "^2.796.0",
     "bcryptjs": "^2.4.3",
@@ -37,7 +32,6 @@
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-watch": "^3.1.4",
-    "husky": "^1.3.1",
     "serverless": "^2.11.1"
   }
 }
